@@ -1,3 +1,10 @@
+2009-12-14  Werner Koch  <wk@g10code.com>
+
+	* assuan.h (ASSUAN_RESPONSE_COMMENT): New.
+	* client.c (assuan_client_read_response): Return comment lines.
+	(assuan_client_parse_response): Return ASSUAN_RESPONSE_COMMENT.
+	(_assuan_read_from_server): Skip comment lines.
+
 2009-12-08  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan.h (struct assuan_system_hooks): Don't use "namespace" as
